# scaffold-generator

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
components/: MODULE_AUTHORING.md
components/backend/fastapi/: agents.md  arch.md  ci.yml  reliability.md  security.md
components/backend/python-cli/: agents.md  arch.md  ci.yml  reliability.md  security.md
components/database/firebase/: agents.md  arch.md  ci.yml  reliability.md  security.md
components/database/postgres/: agents.md  arch.md  ci.yml  reliability.md  security.md
components/frontend/nextjs/: agents.md  arch.md  ci.yml  reliability.md  security.md
components/frontend/react-native/: agents.md  arch.md  ci.yml  reliability.md  security.md
components/inference/pytorch/: agents.md  arch.md  ci.yml  reliability.md  (+1 more)
core/: AGENTS.md  ARCHITECTURE.md  README.md  ci.yml
core/docs/: DESIGN.md  EVALUATOR.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md
docs/: DESIGN.md  EVALUATOR.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md
docs/design-docs/: core-beliefs.md  index.md
docs/exec-plans/: tech-debt-tracker.md
docs/product-specs/: index.md  scaffold-generation.md
examples/: stack-spec.yml
src/scaffold_generator/: __init__.py  assembler.py  cli.py  filesystem.py  resolver.py  spec.py  validator.py  writer.py
tests/: conftest.py
tests/features/: scaffold_generation.feature
tests/step_defs/: test_scaffold_generation.py
tests/unit/: test_assembler.py  test_cli.py  test_resolver.py  test_spec.py  test_validator.py  test_writer.py
(+9 files in other folders)
