[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scaffold-generator"
version = "0.1.0"
description = "Composable scaffold generator. Accepts a structured YAML stack spec and assembles a project scaffold from pre-authored component modules."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click==8.3.3",
    "pyyaml==6.0.3",
    "jsonschema==4.26.0",
    "pytest==9.0.3",
    "pytest-bdd==8.1.0",
    "pytest-mock==3.15.1",
]

[project.optional-dependencies]
dev = [
    "mypy==2.1.0",
    "ruff==0.15.12",
    "types-PyYAML==6.0.12.20260510",
    "types-jsonschema==4.26.0.20260508",
]

[project.scripts]
scaffold = "scaffold_generator.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
bdd_features_base_dir = "tests/features"
addopts = "-ra --strict-markers --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
files = ["src", "tests"]
ignore_missing_imports = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
